--- a/src/main/java/org/olat/course/assessment/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/course/assessment/_i18n/LocalStrings_zh_CN.properties
@@ -2,7 +2,7 @@
 table.header.lastUserModificationDate=\u6700\u540e\u7528\u6237\u66f4\u65b0
 table.header.initialLaunchDate=\u6700\u521d\u7684\u8bfe\u7a0b\u53d1\u5e03
 table.header.status=\u72b6\u6001
-
+index.notifications.certificate=\u751f\u6210\u8bc1\u4e66
 action.choose=\u9009\u62e9
 artefact.title=\u6210\u7ee9\u5355{0}
 assessment.testresults.finished=<font color\="green">\u8bc4\u4f30\u5df2\u5b8c\u6210</font>
