--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_zh_CN.properties
@@ -1,6 +1,6 @@
 #Thu Sep 03 11:24:43 CEST 2015
 qti.form.showfeedbacks=\u663e\u793a\u53cd\u9988
-qti.form.max.score.item=\u663e\u793a\u6700\u5927\u7684\u95ee\u9898\u70b9Show questions max. points
+qti.form.max.score.item=\u663e\u793a\u6700\u5927\u7684\u95ee\u9898\u70b9
 qti.form.auto.memofield=\u4e2a\u4eba\u7b14\u8bb0
 qti.form.fullwindow=\u53ea\u663e\u793a\u6a21\u5757\uff0c\u9690\u85cfLMS
 qti.form.allow.anonym=\u5141\u8bb8\u533f\u540d\u7528\u6237(\u8bbf\u5ba2)
