--- a/src/main/java/org/olat/group/ui/main/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/group/ui/main/_i18n/LocalStrings_de.properties
@@ -159,12 +159,19 @@ course.lastTime=Zuletzt ge\u00f6ffnet
 course.numOfVisits=Anzahl Kursaufrufe
 home=Visitenkarte
 assessment=Bewertungswerkzeug
-add.member=Mitglied hinzuf\u00fcgen
+
+add.member=\u6dfb\u52a0\u6210\u5458
+#add.member=Mitglied hinzuf\u00fcgen
+
 edit.member=Mitglied bearbeiten
 edit.members=Bearbeiten
 edit.member.curriculums=Curriculummitgliedschaften
 edit.member.groups=Gruppenmitgliedschaften
-import.member=Mitglieder hinzuf\u00fcgen
+
+
+import.member=Mitglieder hinzuf\u00fcgen  
+import.member=\u6dfb\u52a0\u591a\u4e2a\u6210\u5458
+
 role.curriculum.participant=Curriculumteilnehmer
 role.curriculum.coach=Curriculumbetreuer
 role.curriculum.owner=Curriculumkursbesitzer
