--- a/src/main/java/org/olat/ims/qti/statistics/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/ims/qti/statistics/ui/_i18n/LocalStrings_de.properties
@@ -5,10 +5,15 @@ answer.no=Nein
 answer.noanswer=keine Antwort
 answer.points=({0} Punkte)
 answer.yes=Ja
-chart.answer.averageScoreQuestions.y=\u5e73\u5747\u5206Durchschnittliche Punkte
+chart.answer.averageScoreQuestions.y=Durchschnittliche Punkte
+chart.answer.averageScoreQuestions.y=\u5e73\u5747\u5206
+
 chart.answers=Antworten
 chart.answerscount=Anzahl Antworten
-chart.averagescore.peritem=\u6bcf\u9898\u5e73\u5747\u5206Durchschnittliche Punkte pro Frage
+
+chart.averagescore.peritem=Durchschnittliche Punkte pro Frage
+chart.averagescore.peritem=\u6bcf\u9898\u5e73\u5747\u5206
+
 chart.cutscore=Notwendige Punktzahl f\u00fcr "Bestanden"
 chart.duration=Bearbeitungs-Dauer in Sekunden
 chart.duration.histogramm=Bearbeitungsdauer
@@ -19,7 +24,8 @@ chart.item=Frage
 chart.maxscore=Maximale Punktzahl
 chart.msgb.sorrycontent=Es existieren zu wenig Daten f\u00fcr eine statistische Auswertung dieser Frage
 chart.msgb.sorrytitle=Entschuldigung
-chart.participants=\u53c2\u4e0e\u8005Teilnehmer
+chart.participants=Teilnehmer
+chart.participants=\u53c2\u4e0e\u8005
 chart.participantspercentage=Teilnehmer in Prozent
 chart.percent=Prozent
 chart.percent.participants=% Teilnehmer
@@ -29,7 +35,8 @@ chart.questioncorrectansweredpercent={0} haben {1}% der Teilnehmer richtig beant
 chart.questionpointsscoredabs=In {0} wurden durchschnittlich {1} Punkte erreicht
 chart.questions=Fragen
 chart.responses=Antworten
-chart.rightanswers.peritem=\u6bcf\u9898\u6b63\u786e\u7387Richtige Antworten pro Frage in Prozenten
+chart.rightanswers.peritem=Richtige Antworten pro Frage in Prozenten
+chart.rightanswers.peritem=\u6bcf\u9898\u6b63\u786e\u7387
 chart.sc.answeroptionchecked={0} Teilnehmer ({1}%) haben diese Anwortm\u00f6glichkeit gew\u00e4hlt
 chart.score.histogramm=Punkteverteilung
 chart.survey.overview=\u00dcbersicht
@@ -51,19 +58,30 @@ fig.averagedur=Durchschnittliche Bearbeitungsdauer
 fig.averagescore=Durchschnittlich erreichte Punktzahl
 fig.avg=Mittelwert
 fig.correctanswers=Anzahl korrekter Antworten
-fig.courseId=\u8bfe\u7a0bIDKurs-ID
-fig.failed=\u672a\u901a\u8fc7Nicht bestanden
+fig.courseId=IDKurs-ID
+fig.courseId=\u8bfe\u7a0b
+fig.failed=Nicht bestanden
+fig.failed=\u672a\u901a\u8fc7
 fig.itemdiff=Itemschwierigkeit
-fig.median=\u4e2d\u503cMedian
-fig.mode=\u6a21\u5f0fModalwert
+fig.itemdiff=\u8bd5\u9898\u96be\u5ea6
+fig.median=Median
+fig.median=\u4e2d\u503c
+fig.mode=Modalwert
+fig.mode=\u6a21\u5f0f
 fig.notanswered=Anzahl nicht beantwortet
 fig.participants=Teilnehmer
-fig.passed=\u901a\u8fc7Bestanden
-fig.span=\u8303\u56f4Spannweite
-fig.stddev=\u6807\u51c6\u504f\u5deeStandardabweichung
+fig.participants=\u53c2\u4e0e\u8005
+fig.passed=Bestanden
+fig.passed=\u901a\u8fc7
+fig.span=Spannweite
+fig.span=\u8303\u56f4
+fig.stddev=Standardabweichung
+fig.stddev=\u6807\u51c6\u504f\u5dee
 fig.surveyId=Fragebogen-ID
 fig.testId=Test-ID
+fig.testId=\u6d4b\u8bd5ID
 fig.title=Kennzahlen
+fig.title=\u91cd\u8981\u53c2\u6570
 fig.wronganswers=Anzahl falscher Antworten
 menu.pull.tests.title=Tests einziehen
 menu.title=Test Statistiken
@@ -71,6 +89,7 @@ print=Drucken
 retrievetest.confirm.text.plural=Wollen Sie wirklich die Tests von "{0}" einziehen?
 retrievetest.nothing.todo=Es gibt zurzeit kein Test dass Sie einziehen k\u00f6nnen.
 section=Sektion
+section=\u7ae0\u8282
 solution=Musterl\u00f6sung
 splash.choosetest=W\u00e4hlen Sie einen Test aus
 splash.notenoughresults=F\u00fcr diesen Test/Umfrage gibt es noch zu wenig Resultate ({0} Teilnehmer)
