--- a/src/main/java/org/olat/modules/co/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/co/_i18n/LocalStrings_de.properties
@@ -1,13 +1,20 @@
 #Mon Mar 02 09:54:04 CET 2009
-contact.body=Nachricht \u6d88\u606f
-contact.cp.from = Kopie an Absender\u6d4b\u8bd5
+contact.body=Nachricht
+contact.body=\u6d88\u606f
+contact.cp.from = Kopie an Absender
+contact.cp.from =\u6d4b\u8bd5 
 contact.list.sender = Absender
-contact.from=Von \u4ece
-contact.subject=Betreff \u4e3b\u9898
-contact.to=An \u81f3
+contact.from=Von 
+contact.from=\u4ece
+contact.subject=Betreff 
+contact.subject=\u4e3b\u9898
+contact.to=An 
+contact.to=\u81f3
 contact.to.groupname.undisclosedrecipients=Vordefinierte Empf\u00e4nger
-contact.attachment=Anhang \u9644\u4ef6
-contact.attachment.maxsize={0} MB ist die maximal Gr\u00f6sse f\u00fcr Anh\u00e4nge\u9644\u4ef6\u6700\u5927\u4e3a{0} MB
+contact.attachment=Anhang 
+contact.attachment=\u9644\u4ef6
+contact.attachment.maxsize={0} MB ist die maximal Gr\u00f6sse f\u00fcr Anh\u00e4nge
+contact.attachment.maxsize=\u9644\u4ef6\u6700\u5927\u4e3a{0} MB
 error.field.not.empty=Dieses Feld darf nicht leer sein
 error.field.not.valid.email=Es muss eine valide E-Mailadresse sein.
 error.msg.content.nok=Die Betreffzeile oder die Nachricht sind ung\u00fcltig.
