--- a/src/main/java/org/olat/repository/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/repository/_i18n/LocalStrings_zh_CN.properties
@@ -172,10 +172,9 @@ cif.status.preparation=\u51c6\u5907
 details.label.status=\u72b6\u6001
 table.header.access=\u72b6\u6001
 cif.status.review=\u590d\u4e60
-cif.status.coachpublished=Access for coach
+cif.status.coachpublished=\u8bbf\u95ee\u6559\u5458
 cif.status.published=\u5df2\u53d1\u5e03
 status.closed=\u5df2\u7ed3\u675f
-change.to.close=\u5df2\u7ed3\u675f
 search.courses.closed=\u5df2\u7ed3\u675f
 cif.resources.status.closed=$\:status.closed
 details.close.ressoure.desc.4=\u8be5\u8bfe\u7a0b\u53ef\u4ee5\u5728\u201c\u5df2\u5b8c\u6210\u201d\u9009\u9879\u5361\u4e0b\u7684\u8bfe\u7a0b\u4e2d\u627e\u5230\u3002
@@ -655,3 +654,23 @@ wizard.velocity.step1.par4e=<b>\u8bf7\u6ce8\u610f\uff1a\u8bfe\u7a0b\u7684\u72b6\
 wizardsteptitledescription=\u63cf\u8ff0\u767b\u8bb0
 wizardsteptitleproperties=\u8bbe\u7f6e\u5c5e\u6027
 wizardsteptitleupload=\u4e0a\u4f20\u6587\u4ef6
+
+access.info.conditions.coach=Nur in Status "$\:cif.status.coachpublished", "$\:cif.status.published" oder "$\:cif.status.closed"
+
+access.info.conditions.participant=Nur in Status "$\:cif.status.published" oder "$\:cif.status.closed"
+
+
+cif.resources.status.closed=$\:status.closed
+
+
+cif.status.closed=$\:status.closed
+cif.softkey=OpenOLAT \u7248\u672cID
+details.delete.acknowledge.msg=\u6240\u6709\u6587\u4ef6\u5c06\u88ab\u6c38\u4e45\u5220\u9664\uff0c\u65e0\u6cd5\u6062\u590d\u3002
+
+dialog.confirm.delete.permanent=\u4f7f\u7528\u6b64\u65b9\u6cd5\uff0c\u5305\u62ec\u6240\u6709\u7528\u6237\u6570\u636e\u5728\u5185\u7684\u5b66\u4e60\u8d44\u6e90\u5c06\u88ab\u6c38\u4e45\u5220\u9664\uff0c\u65e0\u6cd5\u6062\u590d\u3002
+
+cif.authors=\u4f5c\u8005
+cif.owners=\u521b\u4f5c\u6743
+
+
+table.status.closed=$\:status.closed
