--- a/src/main/java/org/olat/admin/user/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/admin/user/_i18n/LocalStrings_de.properties
@@ -62,7 +62,10 @@ found.property=Property ausgew\u00e4hlt {0}
 groupmanagers=Gruppenverwalter
 header.autocompletion=Suche mit Autovervollst\u00e4ndigung
 header.normal=Suche mit Benutzerattributen
-instoresmanager=Lernressourcenverwalter\u8bfe\u7a0b\u8d44\u6e90\u7ecf\u7406
+
+instoresmanager=Lernressourcenverwalter
+instoresmanager=\u8bfe\u7a0b\u8d44\u6e90\u7ecf\u7406
+
 mailtemplate.login.denied.body=Sehr geehrte/r {6} {4},\n\nIhr OpenOLAT Account {0} mit der E-Mail {1} auf dem System {5} wurde deaktiviert.\n\nWenn Sie m\u00f6chten, dass der Account wieder aktiviert wird, dann melden Sie sich bitte beim Support unter {3}.\n\n\nViele Gr\u00fcsse\nDas e-Learning Team
 mailtemplate.login.denied.subject=Deaktivierung ihres OpenOLAT Accounts
 mailto.userlist=Liste der Benutzer
@@ -99,15 +102,31 @@ role.guest.true=Anonymer Gast
 role.author=Autor
 role.curriculummanager=Curriculumverwalter
 role.groupmanager=Gruppenverwalter
-role.learnresourcemanager=Lernressourcenverwalter \u8bfe\u7a0b\u8d44\u6e90\u7ecf\u7406
+
+role.learnresourcemanager=Lernressourcenverwalter
+role.learnresourcemanager=\u8bfe\u7a0b\u8d44\u6e90\u7ecf\u7406
+
 role.invitee=Einladung
-role.lecturemanager=Lektionblockverwalter \u6f14\u8bb2\u7ecf\u7406
-role.linemanager=Line manager\u751f\u547d\u7ebf\u7ecf\u7406
+role.lecturemanager=Lektionblockverwalter 
+role.lecturemanager=\u6f14\u8bb2\u7ecf\u7406
+
+role.linemanager=Line manager
+role.linemanager=\u751f\u547d\u7ebf\u7ecf\u7406
+
 rightsForm.isLoginDenied=Login gesperrt
-role.poolmanager=Poolverwalter \u95ee\u9898\u6c60\u7ecf\u7406
-role.principal=Principal\u6821\u957f
-role.qualitymanager=Qualityverwalter\u8d28\u91cf\u7ecf\u7406
-role.rolesmanager=Rollenverwalter \u89d2\u8272\u7ecf\u7406
+role.poolmanager=Poolverwalter
+role.poolmanager=\u95ee\u9898\u6c60\u7ecf\u7406
+
+
+role.principal=Principal
+role.principal=\u6821\u957f
+
+role.qualitymanager=Qualityverwalter
+role.qualitymanager=\u8d28\u91cf\u7ecf\u7406
+
+role.rolesmanager=Rollenverwalter
+role.rolesmanager=\u89d2\u8272\u7ecf\u7406
+
 role.user=Benutzer
 role.usermanager=Benutzerverwalter
 role.sysadmin=Systemadministrator
