--- a/src/main/java/org/olat/commons/calendar/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/commons/calendar/_i18n/LocalStrings_zh_CN.properties
@@ -196,7 +196,8 @@ month.short.nov=11\u6708
 month.short.oct=10\u6708
 month.short.sep=9\u6708
 error.goto.date=\u9519\u8bef\u7684\u65e5\u671f\u683c\u5f0f(dd.mm.yy)
-
+cal.form.description=\u63cf\u8ff0
+cal.form.created.by=\u4ece
 tab.event=\u4e8b\u4ef6\u8be6\u60c5
 tab.links=\u94fe\u63a5
 uncheckall=\u5168\u90e8\u53d6\u6d88
