--- a/src/main/java/org/olat/core/util/mail/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/core/util/mail/_i18n/LocalStrings_zh_CN.properties
@@ -1,6 +1,6 @@
 #Sun Oct 09 05:46:32 CEST 2016
 mail.from=\u53d1\u9001\u8005
-mail.admin.preview.text=<h1>Lorem Ipsum</h1>Lorem Ipsum<br/><br/>Repudiandae soluta assumenda aut quia nulla in laudantium praesentium.<br/><br/><div class="o_email_button_group"><a class="o_email_button" href="https://www.openolat.com">Lorem Ipsum</a></div><br/>Repudiandae soluta assumenda aut quia nulla in laudantium praesentium. Quo corporis praesentium sit quasi repellat incidunt explicabo velit. <strong>Tenetur ea et nihil.</strong> Est dolores et facilis est minima et dolor. Voluptas veniam et ullam porro quia exercitationem.
+mail.admin.preview.text=<h1>Lorem Ipsum-test</h1>Lorem Ipsum<br/><br/>Repudiandae soluta assumenda aut quia nulla in laudantium praesentium.<br/><br/><div class="o_email_button_group"><a class="o_email_button" href="https://www.openolat.com">Lorem Ipsum</a></div><br/>Repudiandae soluta assumenda aut quia nulla in laudantium praesentium. Quo corporis praesentium sit quasi repellat incidunt explicabo velit. <strong>Tenetur ea et nihil.</strong> Est dolores et facilis est minima et dolor. Voluptas veniam et ullam porro quia exercitationem.
 
 add.email=\u589e\u52a0
 contact.cp.from=\u53d1\u9001\u7ed9\u53d1\u4ef6\u4eba\u7684\u590d\u4ef6
