--- a/src/main/java/org/olat/modules/assessment/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/assessment/ui/_i18n/LocalStrings_de.properties
@@ -4,14 +4,19 @@ assessment.status.inProgress=Gestartet
 assessment.status.inReview=Korrigieren
 assessment.status.notStart=Nicht gestartet
 assessment.tool.assessable.items=Liste aller bewertbaren Elemente
+assessment.tool.assessable.items=\u53ef\u8bc4\u7a0e\u9879\u76ee\u4e00\u89c8\u8868
 assessment.tool.numOfAssessedGroups={0} Gruppe(n)
 assessment.tool.numOfAssessedIdentities={0} Benutzer
+assessment.tool.numOfAssessedIdentities={0} \u7528\u6237
 assessment.tool.numOfFailed={0} Benutzer haben nicht bestanden
+assessment.tool.numOfFailed={0} \u4e2a\u5931\u8d25\u7528\u6237
 assessment.tool.numOfPassed={0} Benutzer haben bestanden
-assessment.tool.overview=\u00DCbersicht
+assessment.tool.numOfPassed={0}\u4e2a\u901a\u8fc7\u7528\u6237
+assessment.tool.overview=\u00dcbersicht
 assessment.tool.quick.links=Schnellzugang
-command.next=Weiter zum n\u00E4chsten Benutzer
-command.previous=Zur\u00FCck zum letzten Benutzer
+assessment.tool.quick.links=\u5feb\u901f\u94fe\u63a5
+command.next=Weiter zum n\u00e4chsten Benutzer
+command.previous=Zur\u00fcck zum letzten Benutzer
 filter=Filter
 filter.anonymousUsers=Anonym Benutzer
 filter.done=Bewertet
@@ -21,22 +26,28 @@ filter.inProgress=Gestartet
 filter.inReview=Korrigieren
 filter.otherUsers=Alle Benutzer (inklusive Betreuer und Besitzer)
 filter.passed=Bestanden
-index.introduction=Mit diesem Werkzeug bewerten Sie die Teilnehmer dieser Lernressource. Es gestattet Ihnen, Testergebnisse einzusehen und zu \u00E4ndern.
-reopen=Erneut f\u00FCr Beurteilung \u00F6ffnen
-review=\u00DCberpr\u00FCfen
+index.introduction=Mit diesem Werkzeug bewerten Sie die Teilnehmer dieser Lernressource. Es gestattet Ihnen, Testergebnisse einzusehen und zu \u00e4ndern.
+reopen=Erneut f\u00fcr Beurteilung \u00f6ffnen
+review=\u00dcberpr\u00fcfen
 run.ended=Beendet
 save.done=Speichern und in Status 'abgeschlossen' setzen
-statistics.small.overview=Statistiken \u00DCbersicht
+statistics.small.overview=Statistiken \u00dcbersicht
+statistics.small.overview=\u7edf\u8ba1\u6982\u8ff0
 table.header.assessmentStatus=Status
 table.header.completion=Fortschritt
-table.header.elements.toReview=Zu \u00FCberpr\u00FCfen
+table.header.elements.toReview=Zu \u00fcberpr\u00fcfen
 table.header.name=Benutzername
-table.header.numOfInitialLaunch=Mindestens einmal ge\u00F6ffnet
+table.header.numOfInitialLaunch=Mindestens einmal ge\u00f6ffnet
+table.header.numOfInitialLaunch=\u81f3\u5c11\u6253\u5f00\u4e00\u6b21\u8d44\u6e90
 table.header.numOfOtherUsers=Anzahl nicht-registrierter Benutzer
+table.header.numOfOtherUsers=\u672a\u6ce8\u518c\u7528\u6237\u6570\u91cf
 table.header.numOfParticipants=Anzahl registrierter Teilnehmer
+table.header.numOfParticipants=\u6ce8\u518c\u53c2\u52a0\u8005\u4eba\u6570
 table.header.numOfPassed=Bestanden
 table.header.passed=Bestanden
 table.header.scoreAverage=Durchschnitt
+table.header.scoreAverage=\u5e73\u5747\u5206
 table.header.tools=<i class\='o_icon o_icon_actions o_icon-lg'> </i>
 users=Benutzer
 waiting.review=Anstehende Bewertungen
+waiting.review=\u5f85\u5ba1\u6838
