--- a/src/main/java/org/olat/core/commons/modules/glossary/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/core/commons/modules/glossary/_i18n/LocalStrings_zh_CN.properties
@@ -1,6 +1,6 @@
 #Fri Dec 17 17:13:23 CET 2010
 glossary.title = \u672f\u8bed
-
+glossary.list.showall=\u663e\u793a\u5168\u90e8
 cmd.add=\u65b0\u589e\u8bcd\u6761
 cmd.delete=\u5220\u9664
 cmd.edit=\u7f16\u8f91
