--- a/src/main/java/org/olat/course/archiver/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/course/archiver/_i18n/LocalStrings_zh_CN.properties
@@ -2,8 +2,19 @@
 menu.surveys=\u8c03\u67e5
 menu.qtitestresults=\u6d4b\u8bd5
 pf=\u53c2\u4e0e\u8005\u6587\u4ef6\u5939
-
-
+iqsurv=\u95ee\u5377\u8c03\u67e5\u7ed3\u679c
+overview.nonodes.iqsurv=\u672c\u8bfe\u7a0b\u4e0d\u5305\u542b\u4efb\u4f55\u8c03\u67e5\u3002
+survey=\u8c03\u67e5
+form.commentcol=\u663e\u793a\u7b54\u6848\u8bc4\u8bba (QTI 2.1 only)
+form.poscol.extra=\u663e\u793a\u6240\u9009\u7b54\u6848 (QTI 1.2 only)
+form.title=\u8bbe\u7f6e\u9009\u9879\:
+download.options=\u914d\u7f6e\u4e0b\u8f7d\u9009\u9879
+nodechoose.intro.config=\u5b58\u6863\u5c06\u5305\u542b\\uff1a\u6240\u6709\u7528\u6237\uff0c\u6240\u6709\u95ee\u9898\uff0c\u6240\u6709\u9879\u76ee\u3002\u4f7f\u7528\u4e0a\u9762\u7684\u6309\u94ae\u66f4\u6539\u4e0b\u8f7d\u914d\u7f6e\u3002
+overview.nonodes.iqtest=\u672c\u8bfe\u7a0b\u4e0d\u5305\u542b\u4efb\u4f55\u6d4b\u8bd5\u3002
+nodechoose.intro.iqsurv=\u9009\u62e9\u8981\u5f52\u6863\u5176\u6d4b\u8bd5\u7ed3\u679c\u7684\u8bfe\u7a0b\u5143\u7d20\u3002
+iqtest=\u6d4b\u8bd5\u548c\u81ea\u68c0\u7ed3\u679c
+overview.nonodes.survey=\u672c\u8bfe\u7a0b\u4e0d\u5305\u542b\u4efb\u4f55\u8c03\u67e5\u8981\u7d20\u3002
+nodechoose.intro.iqtest=\u9009\u62e9\u8981\u5f52\u6863\u5176\u6d4b\u8bd5\u7ed3\u679c\u7684\u8bfe\u7a0b\u5143\u7d20\u3002
 checklist=\u6e05\u5355
 cmd.download=\u4e0b\u8f7d
 cmd.start=\u5f00\u59cb
