--- a/src/main/java/org/olat/course/assessment/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/course/assessment/_i18n/LocalStrings_zh_CN.properties
@@ -59,6 +59,7 @@ form.min=\u6700\u4f4e\u5f97\u5206
 form.passed=\u5df2\u901a\u8fc7
 form.passed.false=\u5426
 form.passed.true=\u662f
+table.header.recertification=\u6362\u53d1\u65b0\u8bc1
 form.passed.undefined=\u65e0\u4fe1\u606f
 form.score=\u5f97\u5206
 form.score.rounded=\u5f97\u5206\u7cbe\u786e\u5230\u5c0f\u6570\u70b9\u540e3\u4f4d
@@ -136,6 +137,8 @@ table.header.node=\u5b66\u7a0b\u5143\u7d20
 table.header.overallselect=\u603b\u5206
 table.header.passed=\u5df2\u901a\u8fc7
 table.header.score=\u5f97\u5206
+menu.efficiency.statment=\u6548\u7387\u62a5\u8868
+menu.efficiency.statment.alt=$\:menu.efficiency.statment
 table.header.show=\u6210\u7ee9\u5355
 table.header.singleselect=\u5355\u5206
 table.header.status=\u72b6\u6001
