--- a/src/main/java/org/olat/course/assessment/ui/tool/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/course/assessment/ui/tool/_i18n/LocalStrings_zh_CN.properties
@@ -3,3 +3,5 @@ assessmentLock=\u7528\u6237{0}({1})\u6b63\u5728\u88ab\u4fee\u6539\u8be5\u9879\u8
 assessment.tool.overview=\u6982\u8ff0
 users=\u7528\u6237
 overview=\u6982\u8ff0
+assessment.tool.numOfAssessableCourseNodes={0} \u8bfe\u7a0b\u5143\u7d20(s)
+table.header.elements.toReview=\u5143\u7d20
