--- a/src/main/java/org/olat/course/member/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/course/member/_i18n/LocalStrings_zh_CN.properties
@@ -8,8 +8,7 @@ group.add=\u6dfb\u52a0\u7fa4\u7ec4
 import.member=\u5bfc\u5165\u6210\u5458
 add.member=\u6dfb\u52a0\u6210\u5458
 dedup.members=\u6e05\u7406\u6210\u5458
-search.curriculum=\u4ec5\u9650\u8bfe\u7a0b\u6210\u5458only curriculum members 
-
+search.curriculum=\u4ec5\u9650\u603b\u8bfe\u7a0b\u6210\u5458
 menu.members=\u6210\u5458
 menu.orders=\u9884\u8ba2
 menu.orders.alt=\u9884\u5b9a\u7ba1\u7406
