--- a/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_zh_CN.properties
@@ -80,8 +80,14 @@ form.imd.match.single.multiple=\u7c7b\u578b
 form.imd.mimetype=\u671f\u671b\u7684mime\u7c7b\u578b
 form.imd.rubric=\u63cf\u8ff0
 form.imd.shuffle=\u62d6\u62fd\u7b54\u6848
+add.additional.feedback=\u6dfb\u52a0\u5e26\u6709\u6761\u4ef6\u7684\u53cd\u9988
+add.feedback.menu=\u6dfb\u52a0\u53cd\u9988
+form.imd.hint.text=Hint
+add.correctSolution.feedback=\u6dfb\u52a0\u6b63\u786e\u7684\u89e3\u51b3\u65b9\u6848
+add.incorrect.feedback=\u6dfb\u52a0\u9519\u8bef\u7b54\u6848\u7684\u53cd\u9988
+add.additional.feedback=\u6dfb\u52a0\u5e26\u6709\u6761\u4ef6\u7684\u53cd\u9988
 form.imd.title=\u6807\u9898
-form.imd.wrong.kprim=False
+form.imd.wrong.kprim=\u9519\u8bef
 form.kprim=Kprim
 form.match=\u914d\u5bf9
 form.metadata=\u5143\u6570\u636e
