--- a/src/main/java/org/olat/modules/assessment/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/assessment/ui/_i18n/LocalStrings_de.properties
@@ -1,7 +1,10 @@
 #Fri Sep 30 15:04:37 CEST 2016
 assessment.status.done=Bewertet
+assessment.status.done=\u5df2\u8bc4\u4f30
 assessment.status.inProgress=Gestartet
+assessment.status.inProgress=\u5df2\u5f00\u59cb
 assessment.status.inReview=Korrigieren
+assessment.status.inReview=\u56de\u987e
 assessment.status.notStart=Nicht gestartet
 assessment.tool.assessable.items=Liste aller bewertbaren Elemente
 assessment.tool.assessable.items=\u53ef\u8bc4\u7a0e\u9879\u76ee\u4e00\u89c8\u8868
@@ -20,12 +23,17 @@ command.previous=Zur\u00fcck zum letzten Benutzer
 filter=Filter
 filter.anonymousUsers=Anonym Benutzer
 filter.done=Bewertet
+filter.done=\u5df2\u8bc4\u4f30
 filter.failed=Nicht bestanden
+filter.failed=\u672a\u901a\u8fc7
 filter.groups=Gruppen
 filter.inProgress=Gestartet
+filter.inProgress=\u5df2\u5f00\u59cb
 filter.inReview=Korrigieren
+filter.inReview=\u56de\u987e
 filter.otherUsers=Alle Benutzer (inklusive Betreuer und Besitzer)
 filter.passed=Bestanden
+filter.passed=\u901a\u8fc7
 index.introduction=Mit diesem Werkzeug bewerten Sie die Teilnehmer dieser Lernressource. Es gestattet Ihnen, Testergebnisse einzusehen und zu \u00e4ndern.
 reopen=Erneut f\u00fcr Beurteilung \u00f6ffnen
 review=\u00dcberpr\u00fcfen
@@ -44,7 +52,9 @@ table.header.numOfOtherUsers=\u672a\u6ce8\u518c\u7528\u6237\u6570\u91cf
 table.header.numOfParticipants=Anzahl registrierter Teilnehmer
 table.header.numOfParticipants=\u6ce8\u518c\u53c2\u52a0\u8005\u4eba\u6570
 table.header.numOfPassed=Bestanden
+table.header.numOfPassed=\u901a\u8fc7
 table.header.passed=Bestanden
+table.header.passed=\u901a\u8fc7
 table.header.scoreAverage=Durchschnitt
 table.header.scoreAverage=\u5e73\u5747\u5206
 table.header.tools=<i class\='o_icon o_icon_actions o_icon-lg'> </i>
