--- a/src/main/java/org/olat/modules/coach/ui/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/modules/coach/ui/_i18n/LocalStrings_zh_CN.properties
@@ -1,5 +1,6 @@
 #Tue Mar 28 09:44:32 CEST 2017
 table.header.course.access=\u72b6\u6001
+table.header.recertification=\u6362\u53d1\u65b0\u8bc1
 coaching.enabled=\u542f\u7528\u8bb2\u8bfe
 coaching.on=\u6253\u5f00
 coaching.title=\u8bb2\u8bfe\u540d\u79f0
