--- a/src/main/java/org/olat/repository/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/repository/_i18n/LocalStrings_zh_CN.properties
@@ -170,6 +170,17 @@ details.members=\u6210\u5458\u7ba1\u7406
 cif.error.corrupted=\u6b64\u5b66\u4e60\u8d44\u6e90\u5df2\u635f\u574f\uff0c\u65e0\u6cd5\u663e\u793a\u3002\u8bf7\u8054\u7cfb\u60a8\u7684\u652f\u6301\u4eba\u5458\u6216\u4f7f\u7528delete\u94fe\u63a5\u4ece\u7cfb\u7edf\u4e2d\u5220\u9664\u6b64\u8d44\u6e90\u3002
 cif.status.preparation=\u51c6\u5907
 details.label.status=\u72b6\u6001
+filter.show.all=\u663e\u793a\u5168\u90e8
+filter.current.courses=\u76ee\u524d\u8bfe\u7a0b
+filter.upcoming.courses=\u5373\u5c06\u5f00\u8bbe\u7684\u8bfe\u7a0b
+closed.resources.title=\u5df2\u7ed3\u675f\u7684\u8bfe\u7a0b
+filter.old.courses=\u5df2\u7ed3\u675f\u7684\u8bfe\u7a0b
+filter.booked.participant=\u9884\u5b9a\u4e3a\u53c2\u4e0e\u8005
+filter.booked.coach=\u9884\u5b9a\u4e3a\u6559\u5458
+filter.booked.author=\u9884\u5b9a\u4e3a\u4f5c\u8005
+filter.not.booked=\u672a\u9884\u5b9a
+filter.not.passed=\u672a\u901a\u8fc7
+filter.without.passed.infos=\u6ca1\u6709\u8bc4\u4f30
 table.header.access=\u72b6\u6001
 cif.status.review=\u590d\u4e60
 cif.status.coachpublished=\u8bbf\u95ee\u6559\u5458
@@ -666,11 +677,13 @@ cif.resources.status.closed=$\:status.closed
 cif.status.closed=$\:status.closed
 cif.softkey=OpenOLAT \u7248\u672cID
 details.delete.acknowledge.msg=\u6240\u6709\u6587\u4ef6\u5c06\u88ab\u6c38\u4e45\u5220\u9664\uff0c\u65e0\u6cd5\u6062\u590d\u3002
-
+filter.passed=\u901a\u8fc7
 dialog.confirm.delete.permanent=\u4f7f\u7528\u6b64\u65b9\u6cd5\uff0c\u5305\u62ec\u6240\u6709\u7528\u6237\u6570\u636e\u5728\u5185\u7684\u5b66\u4e60\u8d44\u6e90\u5c06\u88ab\u6c38\u4e45\u5220\u9664\uff0c\u65e0\u6cd5\u6062\u590d\u3002
-
+rentry.access.type.shared=\u5f00\u653e
 cif.authors=\u4f5c\u8005
 cif.owners=\u521b\u4f5c\u6743
+rentry.access.type.private=\u79c1\u6709
+rentry.access.type.booking=\u9884\u5b9a
 
 
 table.status.closed=$\:status.closed
