--- a/src/main/java/org/olat/resource/accesscontrol/ui/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/resource/accesscontrol/ui/_i18n/LocalStrings_zh_CN.properties
@@ -21,6 +21,8 @@ order.nr=\u9884\u8ba2\u53f7
 order.part.payment=\u9884\u8ba2\u65b9\u5f0f
 order.status=\u72b6\u6001
 order.status.canceled=\u4e2d\u65ad
+offer.description=\u63cf\u8ff0
+from=\u4ece\:
 order.status.error=\u9519\u8bef
 order.status.new=\u65b0\u7684
 order.status.payed=\u5df2\u652f\u4ed8
