--- a/src/main/java/org/olat/core/commons/modules/glossary/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/core/commons/modules/glossary/_i18n/LocalStrings_de.properties
@@ -14,6 +14,7 @@ glossary.edit.title = Glossar: Begriff \u00e4ndern
 glossary.locked = Dieses Glossar wird zurzeit vom Benutzer <b>{0}</b> editiert. Die Editfunktionen sind daher ausgeschaltet.
 
 glossary.list.showall = Alle anzeigen
+glossary.list.showall = \u663e\u793a\u5168\u90e8
 glossary.list.filter = Liste filtern nach: 
 
 cmd.add = Eintrag hinzuf\u00fcgen
