--- a/src/main/java/org/olat/course/assessment/bulk/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/course/assessment/bulk/_i18n/LocalStrings_zh_CN.properties
@@ -1,18 +1,18 @@
 #Wed Jul 28 13:33:30 CEST 2010
-bulk.action.greaterThanMax=\u503C\u5927\u4E8E-10000\u6216\u5927\u4E8E\u4F60\u7684\u6700\u9AD8\u5206({0})
-bulk.action.lessThanMin=\u503C\u5C0F\u4E8E-10000\u6216\u5C0F\u4E8E\u4F60\u7684\u6700\u5C0F\u4F4E\u5206({0})
-bulk.action.no.such.user=\u7528\u6237\u4E0D\u5B58\u5728
-bulk.action.no.value=\u65E0\u503C
-bulk.action.not.allowed=\u8BE5\u7528\u6237\u4E0D\u662F\u8BE5\u7EC4\u6210\u5458\u3002
-bulk.action.ok=\u786E\u5B9A
-bulk.action.setnodepassed=\u901A\u8FC7/\u672A\u901A\u8FC7
-bulk.action.setnodescore=\u5F97\u5206
-bulk.action.setnodeusercomment=\u6279\u6CE8
-bulk.action.wrong.config.toSetPassed=\u6839\u636E\u8BE5\u8BFE\u7A0B\u5143\u7D20\u7684\u914D\u7F6E\uFF0C\u4F60\u65E0\u6CD5\u591F\u4F7F\u7528\u201C\u901A\u8FC7/\u672A\u901A\u8FC7\u201D\u3002
-bulk.action.wrong.config.toSetScore=\u6839\u636E\u8BE5\u8BFE\u7A0B\u5143\u7D20\u7684\u914D\u7F6E\uFF0C\u4F60\u65E0\u6CD5\u4F7F\u7528\u5206\u6570\u3002
-bulk.action.wrong.config.toSetUserComment=\u6839\u636E\u8BE5\u8BFE\u7A0B\u5143\u7D20\u7684\u914D\u7F6E\uFF0C\u4F60\u65E0\u6CD5\u4F7F\u7528\u6279\u6CE8\u3002
-bulk.action.wrong.float=\u9519\u8BEF\u683C\u5F0F
-
-form.step3.delimiter=\u5206\u9694\u7B26\:
-form.step3.delimiter.comma=\u9017\u53F7
-form.step3.delimiter.tab=\u5236\u8868\u7B26
+bulk.action.greaterThanMax=\u503c\u5927\u4e8e-10000\u6216\u5927\u4e8e\u4f60\u7684\u6700\u9ad8\u5206({0})
+bulk.action.lessThanMin=\u503c\u5c0f\u4e8e-10000\u6216\u5c0f\u4e8e\u4f60\u7684\u6700\u5c0f\u4f4e\u5206({0})
+bulk.action.no.such.user=\u7528\u6237\u4e0d\u5b58\u5728
+bulk.action.no.value=\u65e0\u503c
+bulk.action.not.allowed=\u8be5\u7528\u6237\u4e0d\u662f\u8be5\u7ec4\u6210\u5458\u3002
+bulk.action.ok=\u786e\u5b9a
+bulk.action.setnodepassed=\u901a\u8fc7/\u672a\u901a\u8fc7
+bulk.action.setnodescore=\u5f97\u5206
+bulk.action.setnodeusercomment=\u6279\u6ce8
+bulk.action.wrong.config.toSetPassed=\u6839\u636e\u8be5\u8bfe\u7a0b\u5143\u7d20\u7684\u914d\u7f6e\uff0c\u4f60\u65e0\u6cd5\u591f\u4f7f\u7528\u201c\u901a\u8fc7/\u672a\u901a\u8fc7\u201d\u3002
+bulk.action.wrong.config.toSetScore=\u6839\u636e\u8be5\u8bfe\u7a0b\u5143\u7d20\u7684\u914d\u7f6e\uff0c\u4f60\u65e0\u6cd5\u4f7f\u7528\u5206\u6570\u3002
+bulk.action.wrong.config.toSetUserComment=\u6839\u636e\u8be5\u8bfe\u7a0b\u5143\u7d20\u7684\u914d\u7f6e\uff0c\u4f60\u65e0\u6cd5\u4f7f\u7528\u6279\u6ce8\u3002
+bulk.action.wrong.float=\u9519\u8bef\u683c\u5f0f
+table.header.taskStatus=\u72b6\u6001
+form.step3.delimiter=\u5206\u9694\u7b26\:
+form.step3.delimiter.comma=\u9017\u53f7
+form.step3.delimiter.tab=\u5236\u8868\u7b26
