--- a/src/main/java/org/olat/modules/assessment/ui/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/modules/assessment/ui/_i18n/LocalStrings_zh_CN.properties
@@ -26,10 +26,18 @@ command.previous=\u8f6c\u5230\u524d\u4e00\u4e2a\u7528\u6237
 filter=\u8fc7\u6ee4
 filter.anonymousUsers=\u533f\u540d\u7528\u6237
 filter.done=\u5df2\u8bc4\u4f30
-filter.failed=\u672a\u901a\u8fc7
 filter.groups=\u7fa4\u7ec4
 filter.inProgress=\u5df2\u5f00\u59cb
 filter.inReview=\u56de\u987e
-filter.otherUsers=\u6240\u6709\u7528\u6237\uff08\u5305\u62ec\u6240\u6709\u4eba\u548c\u6559\u5e08\uff09
+table.header.numOfPassed=Passed
+table.header.passed=\u901a\u8fc7
 filter.passed=\u901a\u8fc7
+filter.failed=\u672a\u901a\u8fc7
+filter.inProgress=\u5df2\u5f00\u59cb
+assessment.status.inReview=\u56de\u987e
+filter.inReview=\u56de\u987e
+assessment.status.done=\u5df2\u8bc4\u4f30
+filter.done=\u5df2\u8bc4\u4f30
+table.header.assessmentStatus=\u72b6\u6001
+filter.otherUsers=\u6240\u6709\u7528\u6237\uff08\u5305\u62ec\u6240\u6709\u4eba\u548c\u6559\u5e08\uff09
 table.header.tools=<i class\='o_icon o_icon_actions o_icon-lg'> </i>
