--- a/src/main/java/org/olat/course/assessment/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/assessment/_i18n/LocalStrings_de.properties
@@ -152,6 +152,7 @@ table.header.recertification=Rezertifizierung
 table.header.score=Punkte
 table.header.show=Leistungsnachweis
 table.header.status=Status
+table.header.status=\u72b6\u6001
 table.header.type=Typ
 table.header.initialLaunchDate=Erster Kursstart
 table.header.lastScoreDate=Letzte Aktualisierung
