--- a/src/main/java/org/olat/course/assessment/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/assessment/_i18n/LocalStrings_en.properties
@@ -62,6 +62,7 @@ form.individual.assessment.docs=Assessment documents
 form.max=Maximum score
 form.min=Minimum score
 form.passed=Passed
+form.passed=\u901a\u8fc7
 form.passed.false=No
 form.passed.true=Yes
 form.passed.undefined=No information
