--- a/src/main/java/org/olat/course/assessment/ui/tool/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/course/assessment/ui/tool/_i18n/LocalStrings_zh_CN.properties
@@ -5,3 +5,4 @@ users=\u7528\u6237
 overview=\u6982\u8ff0
 assessment.tool.numOfAssessableCourseNodes={0} \u8bfe\u7a0b\u5143\u7d20(s)
 table.header.elements.toReview=\u5143\u7d20
+filter.showAll=\u663e\u793a\u5168\u90e8
