--- a/src/main/java/org/olat/course/member/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/course/member/_i18n/LocalStrings_zh_CN.properties
@@ -41,6 +41,7 @@ select.group=\u6dfb\u52a0\u7fa4\u7ec4
 table.header.edit=\u5904\u7406
 table.header.firstName=\u540d
 table.header.firstTime=\u52a0\u5165
+dedup.members.notfound=\u6ca1\u6709\u53d1\u73b0\u540c\u65f6\u662f\u8bfe\u7a0b\u6210\u5458\u548c\u5c0f\u7ec4\u6210\u5458\u7684\u6210\u5458\u3002
 table.header.freePlace=\u81ea\u7531
 table.header.graduate=$org.olat.group.ui.main\:table.header.graduate
 table.header.groups=\u7fa4\u5219
