--- a/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_zh_CN.properties
@@ -87,7 +87,38 @@ add.correctSolution.feedback=\u6dfb\u52a0\u6b63\u786e\u7684\u89e3\u51b3\u65b9\u6
 add.incorrect.feedback=\u6dfb\u52a0\u9519\u8bef\u7b54\u6848\u7684\u53cd\u9988
 add.additional.feedback=\u6dfb\u52a0\u5e26\u6709\u6761\u4ef6\u7684\u53cd\u9988
 form.imd.title=\u6807\u9898
+form.imd.additional.title=\u6807\u9898
+form.imd.answered.title=\u6807\u9898
+form.imd.correct.title=\u6807\u9898
+form.imd.correctSolution.title=\u6807\u9898
+form.imd.empty.title=\u6807\u9898
+form.imd.feedback.title=\u6807\u9898
+form.imd.hint.title=\u6807\u9898
+form.imd.incorrect.title=\u6807\u9898
+form.imd.title=\u6807\u9898
+form.metadata.title=\u6807\u9898
+form.test.correct.title=\u6807\u9898
+form.test.incorrect.title=\u6807\u9898
+table.header.title=\u6807\u9898
+form.score=\u5206\u6570
+form.score.answer.points=\u5206\u6570
+table.header.points=\u5206\u6570
+variable.score=\u5206\u6570
+table.header.attempts=\u5c1d\u8bd5
+variable.attempts=\u5c1d\u8bd5
+table.header.skipping=\u5141\u8bb8\u8df3\u8fc7
+item.session.control.allow.comment=\u5141\u8bb8\u8bc4\u8bba
+table.header.comment=\u5141\u8bb8\u8bc4\u8bba
+item.session.control.allow.review=\u5141\u8bb8\u56de\u987e\u95ee\u9898
+table.header.review=\u5141\u8bb8\u5ba1\u67e5
+item.session.control.show.solution=\u663e\u793a\u89e3\u51b3\u65b9\u6848
+table.header.solution=\u663e\u793a\u89e3\u51b3\u65b9\u6848
+
+
 form.imd.wrong.kprim=\u9519\u8bef
+configuration.overview=\u6d4b\u8bd5\u914d\u7f6e\u6982\u8ff0
+form.metadata.initialAuthor=\u521b\u5efa\u8005
+form.metadata.creationDate=\u521b\u5efa\u65f6\u95f4
 form.kprim=Kprim
 form.match=\u914d\u5bf9
 form.metadata=\u5143\u6570\u636e
