--- a/src/main/java/org/olat/commons/memberlist/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/commons/memberlist/ui/_i18n/LocalStrings_de.properties
@@ -1,12 +1,13 @@
 #Tue Nov 13 17:14:15 CET 2012
 table.header.firstTime=Beitritt
+table.header.firstTime=\u52a0\u5165\u65f6\u95f4
 table.header.lastTime=Zuletzt besucht
 table.header.online=$org.olat.group.ui.main\:table.header.online
 table.header.curriculum=Curriculum
 table.header.curriculum.root.identifier=Bezeichnung
 table.header.curriculum.root.displayname=Name
 nomembers=Keine Mitglieder
-contact.list.external=Externe Empf\u00E4nger
+contact.list.external=Externe Empf\u00e4nger
 contact.list.others=Diverse
 contact.list.participants=Teilnehmer
 contact.list.coaches=Betreuer
