--- a/src/main/java/org/olat/course/assessment/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/course/assessment/_i18n/LocalStrings_zh_CN.properties
@@ -34,7 +34,7 @@ efficiencyStatements.course.noexists=\u8be5\u8bfe\u7a0b\u5df2\u7ecf\u88ab\u9501\
 efficiencyStatements.delete.confirm=\u4f60\u786e\u5b9a\u8981\u5220\u9664\u8be5\u6210\u7ee9\u5355 \u3002
 efficiencyStatementsPortlet.description=\u5feb\u901f\u8bbf\u95ee\u4f60\u4f7f\u7528\u6700\u591a\u7684\u6210\u7ee9\u5355
 efficiencyStatementsPortlet.nostatements=\u60a8\u8fd8\u6ca1\u6709\u6210\u7ee9\u5355\uff01
-efficiencyStatementsPortlet.showAll=\u5168\u90e8\u663e\u793a
+efficiencyStatementsPortlet.showAll=\u663e\u793a\u5168\u90e8
 efficiencyStatementsPortlet.title=\u6211\u7684\u6210\u7ee9\u5355
 efficiencystatement.config=\u4fee\u6539\u8bbe\u7f6e
 efficiencystatement.config.off=\u7981\u7528
@@ -141,9 +141,11 @@ menu.efficiency.statment=\u6548\u7387\u62a5\u8868
 menu.efficiency.statment.alt=$\:menu.efficiency.statment
 table.header.show=\u6210\u7ee9\u5355
 table.header.singleselect=\u5355\u5206
-table.header.status=\u72b6\u6001
+efficiencystatement.intro.4=\u9009\u62e9\u4e0b\u9762\u7684\u6309\u94ae\uff0c\u7acb\u5373\u91cd\u65b0\u8ba1\u7b97\u672c\u8bfe\u7a0b\u7684\u6548\u7387\u58f0\u660e\u3002\u8fd9\u4e2a\u52a8\u4f5c\u53ef\u80fd\u9700\u8981\u4e00\u4e9b\u65f6\u95f4\u3002
 table.header.type=\u7c7b\u578b
+efficiencystatement.recalculate=\u91cd\u65b0\u8ba1\u7b97\u6548\u7387\u58f0\u660e
 title.infocoach=\u8bc4\u4ef7\u7684\u4fe1\u606f
+efficiencystatement.recalculate.warning=\u901a\u8fc7\u6b64\u9009\u62e9\uff0c\u5c06\u91cd\u65b0\u8ba1\u7b97\u672c\u8bfe\u7a0b\u7684\u6548\u7387\u58f0\u660e\u3002\u8fd9\u53ef\u80fd\u9700\u8981\u4e00\u6bb5\u65f6\u95f4\u3002\u4f60\u60f3\u73b0\u5728\u5f00\u59cb\u5417\uff1f
 tool.name=\u8bc4\u4ef7\u5de5\u5177
 userchoose.nousers=\u6ca1\u6709\u627e\u5230\u7528\u6237\u3002\u539f\u56e0\u53ef\u80fd\u662f\u8fd8\u6ca1\u6709\u4eba\u8fdb\u5165\u8be5\u7fa4\u7ec4\u4e2d\u6216\u60a8\u6ca1\u6709\u6307\u5bfc\u6743\u9650\u3002
 userchoose.title=\u9009\u62e9\u4e00\u4e2a\u5b66\u7a0b\u53c2\u4e0e\u8005
