--- a/src/main/java/org/olat/course/member/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/member/_i18n/LocalStrings_de.properties
@@ -1,8 +1,8 @@
 #Mon Jun 25 13:57:44 CEST 2018
 action=Aktion
-add.member=Mitglied hinzuf\u00FCgen
+add.member=Mitglied hinzuf\u00fcgen
 assessment=Bewertungswerkzeug
-course.lastTime=Zuletzt ge\u00F6fnnet
+course.lastTime=Zuletzt ge\u00f6fnnet
 course.membership.creation=Kurs Beitritt
 course.numOfVisits=Anzahl Kursaufrufe
 dedup.done=Bereinigung der Kursmitglieder und Gruppenmitglieder wurde erfolgreich beendet
@@ -12,14 +12,14 @@ dialog.modal.bg.leave.text=Wollen Sie wirklich die Person(en) {0} aus dem Kurs u
 dialog.modal.bg.send.mail=$org.olat.group.ui.main\:dialog.modal.bg.send.mail
 edit.member=Mitglied bearbeiten
 edit.member.groups=Gruppenmitgliedschaften
-edit.member.groups.desc=F\u00FCgen Sie den Benutzer den unten aufgef\u00FChrten Gruppen durch Ausw\u00E4hlen der entsprechenden Checkbox(en) hinzu.
-edit.member.repo.desc=F\u00FCgen Sie den Benutzer dem Kurs hinzu als\:
+edit.member.groups.desc=F\u00fcgen Sie den Benutzer den unten aufgef\u00fchrten Gruppen durch Ausw\u00e4hlen der entsprechenden Checkbox(en) hinzu.
+edit.member.repo.desc=F\u00fcgen Sie den Benutzer dem Kurs hinzu als\:
 edit.member.title=Mitgliederrechte Kurs "{0}"
 error.atleastone=$org.olat.group.ui.main\:error.atleastone
 error.managed.group=$org.olat.group.ui.main\:error.managed.group
 error.msg.send.no.rcps=$org.olat.modules.co\:error.msg.send.no.rcps
 error.select.one=$org.olat.group.ui.main\:error.select.one
-group.add=Gruppe hinzuf\u00FCgen
+group.add=Gruppe hinzuf\u00fcgen
 group.create=Gruppe erstellen
 group.remove=$org.olat.group.ui.edit\:resource.remove
 home=Visitenkarte
@@ -36,10 +36,10 @@ menu.orders.alt=Buchungen
 menu.rights=Rechte
 menu.rights.alt=Rechte
 nomembers=Es wurden keine Mitglieder gefunden, die Ihren Kriterien entsprechen.
-override.member=Externe Verwaltung \u00FCbergehen
-override.member.hint=Die Benutzerverwaltung dieser Lernressource wird extern verwaltet. Als Administrator k\u00F6nnen Sie diese externe Verwaltung \u00FCbergehen. Bitte bedenken Sie, dass das externe datenf\u00FChrunde System \u00FCber Ihre \u00C4nderungen nicht informiert wird und diese unter Umst\u00E4nden wieder r\u00FCckg\u00E4ngig macht.
+override.member=Externe Verwaltung \u00fcbergehen
+override.member.hint=Die Benutzerverwaltung dieser Lernressource wird extern verwaltet. Als Administrator k\u00f6nnen Sie diese externe Verwaltung \u00fcbergehen. Bitte bedenken Sie, dass das externe datenf\u00fchrunde System \u00fcber Ihre \u00c4nderungen nicht informiert wird und diese unter Umst\u00e4nden wieder r\u00fcckg\u00e4ngig macht.
 owners=Besitzer
-owners.infos=Besitzer haben volle Autoren- und Administrationsrechte f\u00FCr diesen Kurs.
+owners.infos=Besitzer haben volle Autoren- und Administrationsrechte f\u00fcr diesen Kurs.
 participants=Teilnehmer
 participants.infos=Teilnehmer haben Zugang zum Kurs.<br/>Gruppenteilnehmer haben Zugang zum Kurs und zu ihrer Gruppe.
 role.group.participant=Gruppenteilnehmer
@@ -62,10 +62,11 @@ search.repositoryEntry=nur Kursmitglieder
 search.roles=Rolle
 search.tutor=$\:role.repo.tutor
 search.waiting=$\:role.group.waiting
-select.group=Gruppe hinzuf\u00FCgen
+select.group=Gruppe hinzuf\u00fcgen
 table.header.edit=Bearbeiten
 table.header.firstName=Vorname
 table.header.firstTime=Beitritt
+table.header.firstTime=\u6ce8\u518c
 table.header.freePlace=Frei
 table.header.graduate=$org.olat.group.ui.main\:table.header.graduate
 table.header.groups=Gruppe
@@ -82,8 +83,8 @@ table.header.tutors=Betreuer
 table.header.tutorsCount=Betreuer
 table.header.waitingList=Warteliste
 tutors=Betreuer
-tutors.infos=Betreuer haben Zugang zum Coaching- und Bewertungswerkzeug f\u00FCr Kursteilnehmer.<br/>Gruppenbetreuer haben Zugang zum Coaching- und Bewertungswerkzeug ihrer Gruppenteilnehmer.
-unoverride.member=\u00DCbergehen anhalten
+tutors.infos=Betreuer haben Zugang zum Coaching- und Bewertungswerkzeug f\u00fcr Kursteilnehmer.<br/>Gruppenbetreuer haben Zugang zum Coaching- und Bewertungswerkzeug ihrer Gruppenteilnehmer.
+unoverride.member=\u00dcbergehen anhalten
 user.notfound=$org.olat.group.ui.main\:user.notfound
-waiting.infos=Personen auf der Gruppenwarteliste haben weder Zugang zum Kurs noch zu der Gruppe. Der Zugang wird erst freigegeben wenn gen\u00FCgend Platz vorhanden ist oder die Person von Hand umgeteilt wurde.
+waiting.infos=Personen auf der Gruppenwarteliste haben weder Zugang zum Kurs noch zu der Gruppe. Der Zugang wird erst freigegeben wenn gen\u00fcgend Platz vorhanden ist oder die Person von Hand umgeteilt wurde.
 waitinglist=Warteliste
