--- a/src/main/java/org/olat/resource/accesscontrol/provider/paypal/ui/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/resource/accesscontrol/provider/paypal/ui/_i18n/LocalStrings_zh_CN.properties
@@ -1,12 +1,13 @@
 #Mon Sep 15 01:43:49 CEST 2014
-paypal.menu.title=PayPal\u914D\u7F6E
-paypal.menu.title.alt=\u4FE1\u7528\u5361\u548CPayPal\u652F\u4ED8\u914D\u7F6E
-paypal.method=PayPal\u548C\u4FE1\u7528\u5361
-paypal.segment.account=PayPal\u8D26\u6237
-paypal.segment.transactions=\u8F6C\u8D26
-paypal.transaction.ack=\u786E\u8BA4
-paypal.transaction.amount=\u91D1\u989D
-paypal.transaction.exec.status=\u4ED8\u6B3E\u72B6\u6001
-paypal.transaction.id=\u4EA4\u6613\u53F7\uFF08\u6536\u6B3E\u4EBA\uFF09
-paypal.transaction.olat.status=OpenOLAT\u72B6\u6001
-paypal.transaction.order=\u6307\u4EE4
+paypal.menu.title=PayPal\u914d\u7f6e
+paypal.transaction.status=\u72b6\u6001
+paypal.menu.title.alt=\u4fe1\u7528\u5361\u548cPayPal\u652f\u4ed8\u914d\u7f6e
+paypal.method=PayPal\u548c\u4fe1\u7528\u5361
+paypal.segment.account=PayPal\u8d26\u6237
+paypal.segment.transactions=\u8f6c\u8d26
+paypal.transaction.ack=\u786e\u8ba4
+paypal.transaction.amount=\u91d1\u989d
+paypal.transaction.exec.status=\u4ed8\u6b3e\u72b6\u6001
+paypal.transaction.id=\u4ea4\u6613\u53f7\uff08\u6536\u6b3e\u4eba\uff09
+paypal.transaction.olat.status=OpenOLAT\u72b6\u6001
+paypal.transaction.order=\u6307\u4ee4
